# spg

./: .gitignore  CMakeLists.txt  DESIGN.txt  README.md  build.sh
include/: crypt.hpp  encrypt.hpp  sodiumcrypt.hpp  tinkcrypt.hpp
include/lib/: byte_vector.hpp
include/testing/: fakecrypt.hpp
src/: encrypt.cpp  sodiumcrypt.cpp  spgdecrypt.cpp  spgencrypt.cpp  tinkcrypt.cpp
src/testing/: fakecrypt.cpp
test/: crypt_test.cpp  encrypt_test.cpp  integration.py  sodiumcrypt_test.cpp
